[package]
name = "diesel_iam_poc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "uuid", "chrono"] }
dotenv = "0.15.0"
uuid = "0.6"
prettytable-rs = "^0.8"
lambda_runtime = "0.3.0"
lambda_http = "0.3.0"
log = "0.4.14"
serde_json = "1.0.64"
simple_logger = "1.11.0"
tokio = {version = "1", features = ["full"]}
